--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   
     <a href="/" class="mobile-nav-link">首页</a>
   
-    <a href="/archives" class="mobile-nav-link">Archives</a>
+    <a href="/archives" class="mobile-nav-link">文档</a>
   
 </nav>
     
